infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client-depl
spec:
  replicas: 1
  selector:
      matchLabels:
          app: client
  template:
      metadata:
          labels:
            app: client
      spec:
          containers:
              - name: client
                image: layonez/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip-srv
spec:
  type: ClusterIP # default type
  selector:
    app: client # find all labeled pods 
  ports:
  - name: client
    protocol: TCP
    targetPort: 3000
    port: 3000
