infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: comments-depl
spec:
  replicas: 1
  selector:
      matchLabels:
          app: comments
  template:
      metadata:
          labels:
            app: comments
      spec:
          containers:
              - name: comments
                image: layonez/comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  type: ClusterIP # default type
  selector:
    app: comments # find all labeled pods 
  ports:
  - name: comments
    protocol: TCP
    targetPort: 4001
    port: 4001
