infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: event-bus-depl
spec:
  replicas: 1
  selector:
      matchLabels:
          app: event-bus
  template:
      metadata:
          labels:
            app: event-bus
      spec:
          containers:
              - name: event-bus
                image: layonez/event-bus
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  type: ClusterIP # default type
  selector:
    app: event-bus # find all labeled pods 
  ports:
  - name: event-bus
    protocol: TCP
    targetPort: 4005
    port: 4005
