infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: moderation-depl
spec:
  replicas: 1
  selector:
      matchLabels:
          app: moderation
  template:
      metadata:
          labels:
            app: moderation
      spec:
          containers:
              - name: moderation
                image: layonez/moderation
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  type: ClusterIP # default type
  selector:
    app: moderation # find all labeled pods 
  ports:
  - name: moderation
    protocol: TCP
    targetPort: 4003
    port: 4003
