infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: query-depl
spec:
  replicas: 1
  selector:
      matchLabels:
          app: query
  template:
      metadata:
          labels:
            app: query
      spec:
          containers:
              - name: query
                image: layonez/query
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  type: ClusterIP # default type
  selector:
    app: query # find all labeled pods 
  ports:
  - name: query
    protocol: TCP
    targetPort: 4002
    port: 4002
